# Reversi

./: .cproject  AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Game.cpp  Game.h  Human.cpp  Human.h  Players.cpp  a.out  main.cpp
Debug/: AIPlayer.d  Cell.d  Game.d  Human.d  Player.d  Players.d  ex2  main.d  makefile  subdir.mk
Debug/gtest_src/gtest/: subdir.mk
Debug/test/: subdir.mk
etc/: log.txt
exe/: client.out  server.out
include/: AIPlayer.h  Board.h  Cell.h  Client.h  Game.h  GameFlow.h  GameLogic.h  Human.h  LocalPlayer.h  Players.h  RemotePlayer.h
src/: AIPlayer.cpp  Board.cpp  Cell.cpp  Client.cpp  Game.cpp  GameFlow.cpp  GameLogic.cpp  Human.cpp  LocalPlayer.cpp  Players.cpp  RemotePlayer.cpp
src/Client/: CMakeLists.txt  a.out  log.txt  main.cpp  makefile
src/Client/include/: AIPlayer.h  Board.h  Cell.h  Client.h  ConsolePrint.h  GameFlow.h  GameLogic.h  GameMenu.h  Human.h  LocalPlayer.h  Players.h  Print.h  RemotePlayer.h
src/Client/lib/googletest-release-1.8.0/googlemock/docs/: CookBook.md
src/Client/lib/googletest-release-1.8.0/googlemock/docs/v1_5/: CookBook.md
src/Client/lib/googletest-release-1.8.0/googlemock/docs/v1_6/: CookBook.md
src/Client/lib/googletest-release-1.8.0/googlemock/docs/v1_7/: CookBook.md
src/Client/src/: AIPlayer.cpp  Board.cpp  Cell.cpp  Client.cpp  ConsolePrint.cpp  GameFlow.cpp  GameLogic.cpp  GameMenu.cpp  Human.cpp  LocalPlayer.cpp  Players.cpp  Print.cpp  RemotePlayer.cpp
src/Client/test/: Board_test.cpp  Board_test.h  Game_Test.cpp  Game_Test.h  Players_Test.cpp  Players_Test.h
src/Server/: CMakeLists.txt  Server.cpp  Server.h  a.out  main.cpp  makefile
src/Server/include/: ClientHandler.h  Command.h  CommandsManager.h  GameInfo.h  GameListCommand.h  JoinCommand.h  Server.h  ServerGames.h  StartCommand.h  Task.h  ThreadPool.h  playCommand.h
src/Server/src/: ClientHandler.cpp  Command.cpp  CommandsManager.cpp  GameInfo.cpp  GameListCommand.cpp  JoinCommand.cpp  Server.cpp  ServerGames.cpp  StartCommand.cpp  ThreadPool.cpp  playCommand.cpp
test/: AllTests.cpp  Board_test.cpp  Board_test.h  Game_Test.h  Players_Test.cpp  Players_Test.h
